[gd_scene load_steps=16 format=3 uid="uid://bh4nstby1hsiv"]

[ext_resource type="Script" uid="uid://bnqk551fgostq" path="res://Scene/Swamp_Level_1/Inventory_items/medallion_on_tree.gd" id="1_0c7ax"]
[ext_resource type="Texture2D" uid="uid://chwv22klbryfo" path="res://Sprites/SwampLevel1/Inventory_items/Medallion/Shine.png" id="3_e8nox"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ml14"]
radius = 212.151

[sub_resource type="Animation" id="Animation_670uj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MedallionOnTree_sprite:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0872665]
}

[sub_resource type="Animation" id="Animation_cwn0n"]
resource_name = "medallion_magpie"
length = 1.333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MedallionOnTree_sprite:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 1, 1.1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -0.174533, 0.0, -0.174533, 0.0]
}

[sub_resource type="Animation" id="Animation_6uurj"]
resource_name = "medallion_on_tree"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MedallionOnTree_sprite:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665, 0.0349066, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b8rcj"]
_data = {
&"RESET": SubResource("Animation_670uj"),
&"medallion_magpie": SubResource("Animation_cwn0n"),
&"medallion_on_tree": SubResource("Animation_6uurj")
}

[sub_resource type="Animation" id="Animation_jge4f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shine:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shine:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bb75m"]
resource_name = "shine"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shine:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shine:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4, 6, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 3.14159, 4.71239, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_coex6"]
_data = {
&"RESET": SubResource("Animation_jge4f"),
&"shine": SubResource("Animation_bb75m")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_8jtny"]
radius = 212.151

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_q3qie"]
load_path = "res://.godot/imported/Take_item_emotion.png-54adb9fcabce9082dcdb6639a63bc984.ctex"

[sub_resource type="Animation" id="Animation_7tyg0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.07, 0.07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_k3rxm"]
resource_name = "emotion"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.01, 0.01), Vector2(0.07, 0.07), Vector2(0.09, 0.09), Vector2(0.07, 0.07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3h47h"]
_data = {
&"RESET": SubResource("Animation_7tyg0"),
&"emotion": SubResource("Animation_k3rxm")
}

[node name="Medallion_on_tree" type="Area2D" groups=["Medallion_on_tree"]]
collision_layer = 8
collision_mask = 16
script = ExtResource("1_0c7ax")

[node name="MedallionOnTree_sprite" type="Sprite2D" parent="."]
visible = false
skew = 0.0872665

[node name="Shine" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, 26)
texture = ExtResource("3_e8nox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5ml14")
debug_color = Color(0.411765, 0.572549, 0.556863, 0.419608)

[node name="Animation_medallion" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b8rcj")
}

[node name="Animation_shine" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_coex6")
}

[node name="Take_emotion" type="Area2D" parent="."]
unique_name_in_owner = true
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Take_emotion"]
shape = SubResource("CircleShape2D_8jtny")
debug_color = Color(0.662745, 0.45098, 0.647059, 0.419608)

[node name="TakeItemEmotion" type="Sprite2D" parent="Take_emotion"]
visible = false
modulate = Color(1, 1, 1, 0.45098)
position = Vector2(25, -29)
rotation = 0.18495
scale = Vector2(0.07, 0.07)
texture = SubResource("CompressedTexture2D_q3qie")

[node name="AnimationEmotion" type="AnimationPlayer" parent="Take_emotion/TakeItemEmotion"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_3h47h")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Animation_medallion" to="." method="_on_animation_medallion_animation_finished"]
[connection signal="body_entered" from="Take_emotion" to="." method="_on_take_emotion_body_entered"]
[connection signal="body_exited" from="Take_emotion" to="." method="_on_take_emotion_body_exited"]
